--- a/testePratico/site-clientes-main/chuva.inc/index.html
+++ b/testePratico/site-clientes-main/chuva.inc/index.html
@@ -19,7 +19,7 @@
 	</header>
 	<main>
 		<div class="video">
-			<div id="vid_62e156624d3071000a5ee937" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62e156624d3071000a5ee937" src="https://images.converteai.net/731b1a17-a0f6-4521-b6f8-c62453dc0b90/players/62e156624d3071000a5ee937/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62e156624d3071000a5ee937" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62e156624d3071000a5ee937">var s=document.createElement("script");s.src="https://scripts.converteai.net/731b1a17-a0f6-4521-b6f8-c62453dc0b90/players/62e156624d3071000a5ee937/player.js",s.async=!0,document.head.appendChild(s);</script>
+<div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/731b1a17-a0f6-4521-b6f8-c62453dc0b90/players/62e156624d3071000a5ee937/embed.html" id="ifr_62e156624d3071000a5ee937" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div>
 		</div>
 		
 	</main>
