--- a/testePratico/site-clientes-main/chuva.inc/index.html
+++ b/testePratico/site-clientes-main/chuva.inc/index.html
@@ -63,7 +63,7 @@
         </div>
     </div>
     </div>
-	<style>.esconder { display: none }</style>
+	<style>.botao { display: none }</style>
 
 <script type="text/javascript">
 document.addEventListener("DOMContentLoaded", function() {
